--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@ After the original interview was revealed as a hoax, Bichlbaum appeared in a fol
 <br><br><br>
 <div class="hoax_footnote_index">[14]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The publication’s origins are rooted in its distribution as a weekly college print publication beginning in 1988, but in the spring of 1996 The Onion put its content online in the form of a website featuring satirical articles reporting on international, national, and local news. Starting in 2007, the organization began publishing satirical news audio and video online, as the Onion News Network. If it’s not clear yet, all the “Onion” news are fabricated, although in a very clever, credible and detailed way. Very often people who are not familiar with what “The Onion” is, think it’s a real news organisation, which, as it turned, led to the real media coverage. I.e., in November 2010, Fox Nation site re-posted a joke from the satirical website The Onion Friday about President Barack Obama sending a 75,000-word e-mail to the the entire nation (“Frustrated Obama Sends Nation Rambling 75,000-Word E-Mail”). Before the article was called out as obviously a joke and taken down, commenters on the site were really getting fired up. “This should be enough to have him removed from office immediately……he is now the highest security risk to this nation,” Obamababble observed (one of the comments). Another takes seriously Onion case was a fake teen-magazine cover with Obama on it, and was picked up by New York Times that stated that “the cover had helped Obama gain popularity within teens”.
 <br><br><br>
-<div class="hoax_footnote_index">[15]</div> https://www.youtube.com/watch?v=g7WjrvG1GMk pig rescues a baby goat
+<div class="hoax_footnote_index">[15]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=g7WjrvG1GMk"> Pig rescues a baby goat </a>
 <br><br><br>
-<div class="hoax_footnote_index">[16]</div> https://www.youtube.com/watch?v=8wQEYoyCU-g&feature=youtu.be chocolate diet
+<div class="hoax_footnote_index">[16]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=8wQEYoyCU-g&feature=youtu.be"> Chocolate diet </a>
 <br><br><br>
-<div class="hoax_footnote_index">[17]</div> https://www.youtube.com/watch?v=FZouZJSG4ic alien autopsy
+<div class="hoax_footnote_index">[17]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=FZouZJSG4ic"> Alien autopsy </a>
 <br><br><br>
 <div class="hoax_footnote_index">[18]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Donald Leu, a researcher from the University of Connecticut, conducted a study among the Facebook generation of students - deemed ‘digital natives’ due to their online savviness - to try to prove they will believe anything they read on the internet. He directed students to the website http://zapatopi.net/treeoctopus,created in 1998 by Lyle Zapato, where they found details about the fabricated endangered Pacific Northwest tree octopus, that was given the Latin name “Octopus paxarbolis” (the species name being coined from Latin pax, the root of Pacific, and Spanish arbol meaning “tree”), in order to test students’ ability to evaluate information they find online. It detailed the creature’s appearance and habits, including how it uses its suckers to move along tree branches in a form of ‘locomotion’ and steals eggs from the nests of birds. It even claimed that it was endangered mainly due to the penchant of wealthy ‘fashionistas’ to use the tree octopuses as ornamental hat decorations. Surprisingly, the students not only believed all of the fabricated information, but also insisted on the existence of the octopus, even when researchers explained all the information had been made up. 
 
@@ -235,16 +235,16 @@ The New York Times ran the story of Sokal's revelation on its front page on May 
 Social Text responded angrily and self-righteously to the parody, but only succeeded in digging itself deeper into the hole that it had fallen into.
 <br><br><br>
 
-<div class="hoax_footnote_index">[23]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; https://www.youtube.com/watch?v=P7aRR86VfTY Crazy Guy Runs Into Outback Tornado To Take Selfie
+<div class="hoax_footnote_index">[23]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=P7aRR86VfTY"> Crazy Guy Runs Into Outback Tornado To Take Selfie </a>
 
 <br><br><br>
-<div class="hoax_footnote_index">[24]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pig rescues baby goat https://www.youtube.com/watch?v=g7WjrvG1GMk
+<div class="hoax_footnote_index">[24]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=g7WjrvG1GMk" >Pig rescues baby goat </a>
 <br><br><br>
 
-<div class="hoax_footnote_index">[25]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Walk on water (Liquid Mountaineering) https://www.youtube.com/watch?v=Oe3St1GgoHQ
+<div class="hoax_footnote_index">[25]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=Oe3St1GgoHQ"> Walk on water (Liquid Mountaineering) </a>
 <br><br><br>
 
-<div class="hoax_footnote_index">[26]</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Golden Eagle Snatches Kid https://www.youtube.com/watch?v=CE0Q904gtMI
+<div class="hoax_footnote_index">[26]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="in_text" href="https://www.youtube.com/watch?v=CE0Q904gtMI">Golden Eagle Snatches Kid </a>
 <br><br><br>
 
 <div class="hoax_footnote_index">[27]</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clone Zone is the app, that allows you to literally clone any website you want, by just entering the URL in a required field and there you have an exact copy of the it, but with a crucial difference - the content is editable. You can upload your own images, link videos, write your own text, and what is also important, you can share it. With this tool anyone  can treat themselves to publishing a The Guardian article or the announcement of a lucrative round of funding on TechCrunch, what the creators of the app actually did as April Fools joke. They shared the cloned site to their personal networks, and immediately the likes and reposts came pouring in, along with congratulations from friends and strangers. According to Analisa and Slava, founders of 4REAL, the story was even being passed around the  Genius offices—an actually well-funded startup whose core product is in many ways similar to Clone Zone—along with murmurs about the necessity of acquiring this competitor. The concept of cloning websites is not particularly new - In 1998, the Italian artists  Eva and Franco Mattes gained notoriety for buying the domain name vaticano.org and using it to undermine the Catholic Church’s official website; they later cloned the websites of their contemporaries and exhibited them as their own works.  The Yes Men, a culture-jamming collective, have created and maintained plenty of fake websites—for George W. Bush, Dow Chemical, the World Trade Organization, and the New York Times—in their ongoing attempt to impersonate and lampoon figures of authority. The thing that makes CloneZone project different though, is the fact that it is in itself a public tool, accessible to anyone, and demonstrating how easily credibility can be achieved.
@@ -834,10 +834,21 @@ One might perhaps get an impression that I am trying to prove an opinion which s
 <br><br><br><br>
 <div id="main_chapter_text">
 
-Thank you for reading it. <br>
-    Thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff.
-<br><br>
-    Thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff thanks n stuff.
+I would like to thank <br>
+Nick Axel <br>
+Dirk Vis, <br>
+and Marjan Brandsma <br>
+for thesis supervision;<br>
+Eric Schrijver  <br>
+and Jochem van de Spek <br>
+for technical help; <br>
+and my boyfriend, <br>
+family, <br>
+and friends <br>
+for their enormous support and encouragement. And also for handling me when I'm stressed and sleep deprived. <br><br>
+And, of course, I would like to thank you, for reading it. I hope it was enjoyable.
+
+
 
 
 </div>
@@ -847,7 +858,7 @@ Thank you for reading it. <br>
 <div id="thanks_stuff">
 <div class="thank_you">SOURCES</div> 
 <br><br><br><br><br><br><br>
-<div id="main_chapter_text"> <div class="list" >
+<div id="main_chapter_text"><div class="list">
 Books and articles:
 <br><br>
 MacDougall, Curtis. (1976) Hoaxes. Dover Pubns<br>
@@ -890,10 +901,9 @@ http://courseweb.stthomas.edu/mjodonnell/j105/vizlit/ml02.html<br>
 http://www.slideshare.net/dianaknoll/media-construct-reality<br>
 Joe Skaggs, artoftheprank.com
 
-<br><br><br><br><br><br>
+<br><br><br><br>
 </div>
 </div>
-
 </div>
 <div id="chapter_transition"></div>
 </body>	
