--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ https://vimeo.com/67627359
 </div>
 
 <div id="print_icon_1"></div> 
-<div id="print_icon_2"><a href="print_stuff.pdf" print><center> <img src="img/desktop_icons/transparent.png"></center></a></div> 
+<div id="print_icon_2"><a href="print.pdf" print><center> <img src="img/desktop_icons/transparent.png"></center></a></div> 
 
 <div id="running_text">
     <marquee behavior="scroll" direction="right"> Bachelor thesis by Elizaveta Pritychenko, 2016, Royal Academy of Art, The Hague </marquee>
