--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- This is the title used by Facebook/Twitter: they recommend to leave out the site name -->
         <meta property="og:title" content="Believe It Or Not - how can credibility be achieved visually?"/>
         <!-- This metadata encodes the author of the page. It is currently not used by Facebook, Twitter, but the script generating our index does use it. -->
-        <meta property="dc:creator" content="Pritychenko, Elizaveta"/>
+        <meta property="dc:creator" content="Elizaveta Pritychenko"/>
         <!-- This is the the preview image used by Facebook/Twitter.
              Facebook currently prefers a 1200x630 image
              Import: this has to be an absolute url including the domain name -->
